gccida/c3/count_pseudo
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_pseudo/src/reload1.c:2072:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 1599, "count_pseudo"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_pseudo/src/reload1.c:2077:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[v3] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_pseudo/src/reload1.c:2104:30: error: use of undeclared identifier 'unk_A1C34C'
v16 = ( _DWORD *)( ( char *)&unk_A1C34C + 4 * v9 + 4 * v2); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_pseudo/src/obj/reload1.o] Error 1
